v11/docs/ModelsWorkflowCertificateRequestCertStoreModel.md
# ModelsWorkflowCertificateRequestCertStoreModel

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**EntryName** | Pointer to **NullableString** |  | [optional] 
**ClientMachine** | Pointer to **NullableString** |  | [optional] 
**StorePath** | Pointer to **NullableString** |  | [optional] 

## Methods

### NewModelsWorkflowCertificateRequestCertStoreModel

`func NewModelsWorkflowCertificateRequestCertStoreModel() *ModelsWorkflowCertificateRequestCertStoreModel`

NewModelsWorkflowCertificateRequestCertStoreModel instantiates a new ModelsWorkflowCertificateRequestCertStoreModel object
This constructor will assign default values to properties that have it defined,
and makes sure properties required by API are set, but the set of arguments
will change when the set of required properties is changed

### NewModelsWorkflowCertificateRequestCertStoreModelWithDefaults

`func NewModelsWorkflowCertificateRequestCertStoreModelWithDefaults() *ModelsWorkflowCertificateRequestCertStoreModel`

NewModelsWorkflowCertificateRequestCertStoreModelWithDefaults instantiates a new ModelsWorkflowCertificateRequestCertStoreModel object
This constructor will only assign default values to properties that have it defined,
but it doesn't guarantee that properties required by API are set

### GetEntryName

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) GetEntryName() string`

GetEntryName returns the EntryName field if non-nil, zero value otherwise.

### GetEntryNameOk

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) GetEntryNameOk() (*string, bool)`

GetEntryNameOk returns a tuple with the EntryName field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetEntryName

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) SetEntryName(v string)`

SetEntryName sets EntryName field to given value.

### HasEntryName

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) HasEntryName() bool`

HasEntryName returns a boolean if a field has been set.

### SetEntryNameNil

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) SetEntryNameNil(b bool)`

 SetEntryNameNil sets the value for EntryName to be an explicit nil

### UnsetEntryName
`func (o *ModelsWorkflowCertificateRequestCertStoreModel) UnsetEntryName()`

UnsetEntryName ensures that no value is present for EntryName, not even an explicit nil
### GetClientMachine

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) GetClientMachine() string`

GetClientMachine returns the ClientMachine field if non-nil, zero value otherwise.

### GetClientMachineOk

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) GetClientMachineOk() (*string, bool)`

GetClientMachineOk returns a tuple with the ClientMachine field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetClientMachine

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) SetClientMachine(v string)`

SetClientMachine sets ClientMachine field to given value.

### HasClientMachine

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) HasClientMachine() bool`

HasClientMachine returns a boolean if a field has been set.

### SetClientMachineNil

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) SetClientMachineNil(b bool)`

 SetClientMachineNil sets the value for ClientMachine to be an explicit nil

### UnsetClientMachine
`func (o *ModelsWorkflowCertificateRequestCertStoreModel) UnsetClientMachine()`

UnsetClientMachine ensures that no value is present for ClientMachine, not even an explicit nil
### GetStorePath

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) GetStorePath() string`

GetStorePath returns the StorePath field if non-nil, zero value otherwise.

### GetStorePathOk

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) GetStorePathOk() (*string, bool)`

GetStorePathOk returns a tuple with the StorePath field if it's non-nil, zero value otherwise
and a boolean to check if the value has been set.

### SetStorePath

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) SetStorePath(v string)`

SetStorePath sets StorePath field to given value.

### HasStorePath

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) HasStorePath() bool`

HasStorePath returns a boolean if a field has been set.

### SetStorePathNil

`func (o *ModelsWorkflowCertificateRequestCertStoreModel) SetStorePathNil(b bool)`

 SetStorePathNil sets the value for StorePath to be an explicit nil

### UnsetStorePath
`func (o *ModelsWorkflowCertificateRequestCertStoreModel) UnsetStorePath()`

UnsetStorePath ensures that no value is present for StorePath, not even an explicit nil

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


